@@ -1,7 +1,7 @@
 flake8
 coveralls
 isort==4.3.21
-tox-travis
+tox
 invoke==0.12.2
 docutils==0.13.1
 mock
